--- a/src/index.css
+++ b/src/index.css
@@ -777,8 +777,16 @@ button:not(:disabled),
   }
 }
 
+.img-zoom{
+  transition: transform .5s;
+  border-radius: 15%;
+}
+.img-zoom:hover {
+  transform: scale(1.3);
+}
+
 .footer{
-  padding-top: 2rem;
+  padding-top: 2.5rem;
 }
 
 .footer-logo{
